--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <title>Calculator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="skeleton.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="calculator">
-
+    <div class="container">
+        <div class="background">
+            <img src="iphone.png">
+        </div><div class="calculator"></div>
     </div>
 </body>
 </html>
